--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "fullstackauthproject",
   "version": "1.0.0",
+  "type": "module",
   "main": "Backend/index.js",
   "scripts": {
     "dev": "NODE_ENV=development nodemon Backend/index.js",
