--- a/Frontend/vite-project/package.json
+++ b/Frontend/vite-project/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "auth-tutorial": "file:../..",
     "axios": "^1.10.0",
     "framer-motion": "^12.18.1",
     "fullstackauthproject": "file:../..",
