--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "fullstackauthproject",
+  "name": "auth-tutorial",
   "version": "1.0.0",
-  "type": "module",
-  "main": "Backend/index.js",
+  "description": "",
+  "main": "backend/index.js",
   "scripts": {
     "dev": "NODE_ENV=development nodemon Backend/index.js",
     "start": "NODE_ENV=production node Backend/index.js",
@@ -10,25 +10,20 @@
   },
   "keywords": [],
   "author": "",
+  "type": "module",
   "license": "ISC",
-  "description": "",
   "dependencies": {
-    "bcrypt": "^6.0.0",
-    "cookie-parser": "^1.4.7",
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
-    "dotenv": "^16.5.0",
-    "express": "^5.1.0",
-    "framer-motion": "^12.18.1",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "mailtrap": "^4.1.0",
-    "mongoose": "^8.15.1",
-    "nodemailer": "^6.10.1"
+    "mailtrap": "^3.4.0",
+    "mongoose": "^8.5.2"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.21",
-    "nodemon": "^3.1.10",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.17"
+    "nodemon": "^3.1.4"
   }
 }
